--- a/style.css
+++ b/style.css
@@ -10,3 +10,51 @@ body {
 }
 
 /* Add styles here! */
+
+.max-width-wrapper {
+  max-width: 784px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+p {
+  font-size: 1.25rem;
+  line-height: 1.5;
+  margin: 16px 0;
+}
+
+.intro-chunk {
+  padding: 64px 24px 64px 24px;
+  max-width: 448px;
+}
+
+.title {
+  margin: 48px 0;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+main {
+  background-color: hsl(0deg, 0%, 60%);
+  border-top: solid 8px hsl(0deg, 0%, 40%);
+  padding: 64px 0;
+}
+
+.card {
+  background-color: hsl(0deg, 0%, 100%);
+  padding: 24px;
+  padding-top: 8px;
+  margin: 0;
+  border-bottom: solid 8px hsl(0deg, 0%, 40%);
+}
+
+.indented-heading {
+  margin: 0px;
+  margin-left: -32px;
+  padding: 16px 24px;
+  width: fit-content;
+  background-color: hsl(45deg, 100%, 50%);
+  border-bottom: solid 8px hsl(45deg, 100%, 40%);
+}
